some collections now have a type of the corresponding interface rather than its concrete implementation class